--- a/index.html
+++ b/index.html
@@ -1,2 +1,4 @@
 hello world
 my name is Wu Zhen .This is my life.l have some trouble,but i still have dreams.
+title: [The title of your site]
+description: [A short description of your site's purpose]
