--- a/index.html
+++ b/index.html
@@ -1,4 +1,12 @@
-hello world
-my name is Wu Zhen .This is my life.l have some trouble,but i still have dreams.
-title: [The title of your site]
-description: [A short description of your site's purpose]
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="utf-8">
+<title>文档标题</title>
+</head>
+ 
+<body>
+文档内容......
+</body>
+ 
+</html>
