--- a/index.html
+++ b/index.html
@@ -1,12 +1,21 @@
 <!DOCTYPE html>
 <html>
-<head>
-<meta charset="utf-8">
-<title>文档标题</title>
-</head>
- 
-<body>
-文档内容......
-</body>
- 
+    <head>
+        <title>The members of webelevate6.0 Team 25</title>
+        <link rel="stylesheet" type="text/css" href="team25.css" />
+    </head>
+
+    <body>
+        <h1>Team 25 Members</h1>
+            <ul>
+                <li>Eoghan Heavey</li>
+                <li>Ian Gemmell</li>
+                <li>Ian O'Neill</li>
+                <li>John Burns</li>
+                <li>Gerard McDaid</li>
+                <li>Simon O'Gorman</li>
+            </ul>
+
+    </body>
+
 </html>
